feat(task-4): task 4 initial implementatin, lambdas and enpoints should be renamed later on
